--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,31 +1,41 @@
-name: Site e2e Tests
+name: Release
+
 on:
   push:
     branches: [main]
+    tags: [v*.*.*]
   pull_request:
     branches: [main]
+
+concurrency: ${{ github.workflow }}-${{ github.ref }}
+
 jobs:
-  test:
-    timeout-minutes: 60
+  release:
+    name: Release
     runs-on: ubuntu-latest
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ vars.TURBO_TEAM }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - uses: pnpm/action-setup@v2
         with:
           version: 9.1.1
+
       - uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
           cache: 'pnpm'
+
       - run: pnpm install --frozen-lockfile
-      - run: pnpm exec playwright install --with-deps
-      - run: pnpm test
-      - uses: actions/upload-artifact@v4
-        if: always()
+
+      - name: Create Release Pull Request or Publish to npm
+        uses: changesets/action@v1
         with:
-          name: playwright-report
-          path: apps/site/playwright-report/
-          retention-days: 30
+          publish: pnpm release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
