--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,9 +3,7 @@
   "description": "Reusable constants and utility functions",
   "version": "0.0.0",
   "license": "MIT",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
@@ -15,7 +13,26 @@
     "pretest": "pnpm build",
     "test": "jest"
   },
+
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist/**",
+    "README.md"
+  ],
   "sideEffects": false,
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xyhomi3/omi3.git"
+  },
+  "homepage": "https://github.com/xyhomi3/omi3/tree/main/packages/utils#readme",
+  "bugs": {
+    "url": "https://github.com/xyhomi3/omi3/issues"
+  },
   "dependencies": {
     "clsx": "^2.1.1",
     "react": "^18.3.0",
