--- a/tools/tsup/package.json
+++ b/tools/tsup/package.json
@@ -4,12 +4,30 @@
   "version": "0.0.0",
   "license": "MIT",
   "author": {
-    "name": "lU",
+    "name": "Omi3",
     "url": "https://github.com/xyhomi3"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xyhomi3/omi3.git"
+  },
+  "homepage": "https://github.com/xyhomi3/omi3/tree/main/tools/tsup#readme",
+  "bugs": {
+    "url": "https://github.com/xyhomi3/omi3/issues"
+  },
+  "keywords": [
+    "tsup",
+    "typescript",
+    "build",
+    "compiler",
+    "configs"
+  ],
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
