--- a/turbo.json
+++ b/turbo.json
@@ -14,9 +14,7 @@
       "cache": false,
       "persistent": true
     },
-    "test": {
-      "dependsOn": ["^build", "^test"]
-    },
+    "test": {},
 
     "clean": {
       "cache": false
