--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,12 @@ jobs:
           node-version: 'lts/*'
           cache: 'pnpm'
       - run: pnpm install --frozen-lockfile
-      - run: pnpm exec playwright install --with-deps
-      - run: pnpm test
+      - name: Install playwright browsers
+        run: pnpm exec playwright install --with-deps
+      - name: Build packages
+        run: pnpm build
+      - name: Run tests
+        run: pnpm test
       - uses: actions/upload-artifact@v4
         if: always()
         with:
