fix release workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,14 +2,10 @@ name: Release
 
 on:
   push:
-    branches: [main]
-    tags: [v*.*.*]
+    branches: ["main"]
+    tags: ["v*.*.*"]
   pull_request:
-    branches: [main]
-
-permissions:
-  contents: write
-  pull-requests: write
+    branches: ["main"]
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -17,6 +13,9 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ vars.TURBO_TEAM }}
