Changeset release/refs/pull/5/merge (#6)
* int dev readmes

* Change readme

* Create FUNDING.yml

* Add producthunt badge to main reademe

* docs(changeset): init changeset

* chore: add initial changeset

* update pnpm-lock.yaml & fix typo in footer

* fix test workflow

* fix workflows

* fix workflows

* fix release workflows

* fix release workflows

* fix release workflows

* fix release workflows

* fix release workflows

* fix release workflows

* RELEASING: Releasing 4 package(s) (#2)

Releases:
  @omi3/audio@0.0.1
  @omi3/utils@0.0.1
  @omi3/tsup@0.0.1
  @omi3/site@0.0.1

[skip ci]

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

* .

* RELEASING: Releasing 4 package(s)

Releases:
  @omi3/audio@0.0.2
  @omi3/utils@0.0.2
  @omi3/tsup@0.0.2
  @omi3/site@0.0.2

[skip ci]

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: System Administrator <root@xyhomi3.local>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,9 +35,17 @@ jobs:
 
       - run: pnpm install --frozen-lockfile
 
-      - name: Create Release Pull Request or Publish to npm
+      - name: Create Release Pull Request
         uses: changesets/action@v1
-        if: github.ref == 'refs/heads/main'
+        if: github.event_name == 'pull_request'
+        with:
+          version: pnpm version-packages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish to npm
+        uses: changesets/action@v1
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         with:
           publish: pnpm release
         env:
