--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean": "turbo clean && rm -rf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "changeset": "changeset",
+    "version-packages": "changeset version",
     "release": "turbo build lint test && changeset publish"
   },
   "packageManager": "pnpm@9.1.1",
