--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo build lint test && changeset publish"
+    "release": "turbo build lint && changeset publish"
   },
   "packageManager": "pnpm@9.1.1",
   "engines": {
