--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -17,7 +17,8 @@
     "@omi3/utils": "workspace:*",
     "next": "14.2.8",
     "react": "^18.3.0",
-    "react-dom": "^18.3"
+    "react-dom": "^18.3",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@omi3/tailwind": "workspace:*",
