--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "engines": {
     "node": ">=18"
   },
-  "devDependencies": {
+  "dependencies": {
     "@changesets/cli": "^2.27.8",
     "@manypkg/cli": "^0.21.4",
     "prettier": "^3.2.5",
