--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,10 +2,9 @@ name: Release
 
 on:
   push:
-    branches: ["main"]
-    tags: ["v*.*.*"]
+    branches: [main]
   pull_request:
-    branches: ["main"]
+    branches: [main]
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -36,16 +35,16 @@ jobs:
       - run: pnpm install --frozen-lockfile
 
       - name: Create Release Pull Request
-        uses: changesets/action@v1
         if: github.event_name == 'pull_request'
+        uses: changesets/action@v1
         with:
           version: pnpm version-packages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish to npm
-        uses: changesets/action@v1
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: changesets/action@v1
         with:
           publish: pnpm release
         env:
