--- a/packages/audio/package.json
+++ b/packages/audio/package.json
@@ -49,9 +49,13 @@
     "@omi3/utils": "workspace:*",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
+    "@types/react": "^18.3.0",
     "jest": "29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "peerDependencies": {
+    "react": "^18.3.0"
   }
 }
