--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  contents: write
+
 jobs:
   check:
     name: Check Changes
@@ -12,6 +15,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Configure Git
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
       - name: Setup repository
         run: |
@@ -40,4 +48,10 @@ jobs:
         run: pnpm changeset status
 
       - name: Dry Run Version Update
-        run: pnpm changeset version --dry-run
+        run: pnpm changeset version --dry-run --verbose
+
+      - name: Debug Git status after changeset
+        if: failure()
+        run: |
+          git status
+          git diff
