--- a/packages/audio/package.json
+++ b/packages/audio/package.json
@@ -51,6 +51,7 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.0",
     "jest": "29.7.0",
+    "react": "^18.3.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
