--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -2,7 +2,9 @@
   "name": "@omi3/eslint",
   "version": "0.0.0",
   "license": "MIT",
-  "private": true,
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "lint": "eslint ."
   },
