--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -15,8 +15,10 @@
     "@omi3/audio": "workspace:*",
     "@omi3/ui": "workspace:*",
     "@omi3/utils": "workspace:*",
+    "@vercel/analytics": "^1.3.1",
     "jotai": "^2.9.3",
-    "next": "14.2.8",
+    "next": "latest",
+    "next-intl": "latest",
     "next-themes": "^0.3.0",
     "react": "^18.3.0",
     "react-dom": "^18.3",
