--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,7 +23,7 @@
     "lint": "eslint src"
   },
   "peerDependencies": {
-    "next": "^14.2.5",
+    "next": "^14",
     "react": "^18.3.0"
   },
   "devDependencies": {
@@ -34,17 +34,18 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.0",
     "autoprefixer": "^10.4.20",
-    "next": "14.2.8",
+    "next": "latest",
     "postcss": "^8.4.35",
     "react": "^18.3.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
-    "lucide-react": "^0.439.0"
+    "lucide-react": "^0.441.0"
   }
 }
