--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,23 +20,35 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "dev:story": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "peerDependencies": {
     "next": "^14",
     "react": "^18.3.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.9.0",
     "@omi3/eslint": "workspace:*",
     "@omi3/tailwind": "workspace:*",
     "@omi3/typescript": "workspace:*",
     "@omi3/utils": "workspace:*",
+    "@storybook/addon-essentials": "^8.3.5",
+    "@storybook/addon-interactions": "^8.3.5",
+    "@storybook/addon-links": "^8.3.5",
+    "@storybook/blocks": "^8.3.5",
+    "@storybook/nextjs": "^8.3.5",
+    "@storybook/react": "^8.3.5",
+    "@storybook/test": "^8.3.5",
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.0",
     "autoprefixer": "^10.4.20",
+    "eslint-plugin-storybook": "^0.9.0",
     "next": "latest",
     "postcss": "^8.4.35",
     "react": "^18.3.0",
+    "storybook": "^8.3.5",
     "typescript": "^5.4.5"
   },
   "dependencies": {
