--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "build": "turbo build",
+    "build-storybook": "turbo build-storybook",
     "dev": "turbo dev",
     "lint": "turbo lint",
     "test": "turbo test",
